--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - DevFolio Bootstrap Template</title>
+  <title>Jairo Ramirez - Mi CV</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -91,7 +91,7 @@
                 <p><strong>Nombre: </strong> <span>Jairo Ramirez</span></p>
                 <p><strong>Perfil: </strong> <span>full stack developer</span></p>
                 <p><strong>Correo: </strong> <span>jairoramirezcasas@gmail.com</span></p>
-                <p><strong>Teléfono: </strong> <span>(617) 557-0089</span></p>
+                <p><strong>Teléfono: </strong> <span>(51) 922 381 951</span></p>
               </div>
             </div>
 
@@ -132,7 +132,7 @@
 
           <div class="col-md-6">
             <div class="about-me">
-              <h4>About me</h4>
+              <h4>Sobre mí</h4>
               <p>
                 Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
                 imperdiet et, porttitor
@@ -179,7 +179,7 @@
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
                 <li>(51) 922 381 951</li>
-                <li>alice.barkley@example.com</li>
+                <li>jairoramirezcasas@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -201,6 +201,12 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="resume-item">
+                <h4>Periodismo Deportivo</h4>
+                <h5>2019</h5>
+                <p><em>Instituto San Ignacio de Loyola</em></p>
+                <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              </div><!-- Edn Resume Item -->
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Senior graphic design specialist</h4>
